# studio

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .stylelintrc.json  .yamllint.yaml  Containerfile  Containerfile.dev  Makefile  README.md  bun.lockb  cspell.json  eslint.config.mjs  index.html  package.json  pyproject.toml  tox.ini  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.setup.tsx
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: base.yaml  image.yaml  images.yaml  main.yaml  package.yaml  publish.yaml  release.yaml
.husky/: pre-commit
__mocks__/: pdfjs-dist.ts  zustand.ts
frontend/: vite.config.ts  vitest.setup.tsx
frontend/scripts/: lcov_html.ts  monaco.ts  python.ts  store-last-build-dt.ts
frontend/src/: App.tsx  index.css  index.tsx  svg.d.ts  types.ts  vite-env.d.ts
frontend/src/api/: axiosInstance.ts  fileBrowserService.ts  waldiezFlowService.ts
frontend/src/components/AnsiRenderer/: AnsiRenderer.tsx  index.ts
frontend/src/components/FileBrowser/: ActionButtons.tsx  FileBrowser.css  FileBrowser.tsx  FileBrowserProvider.tsx  Header.tsx  index.ts  useFileBrowser.ts
frontend/src/components/FlowModal/: FlowModal.css  FlowModal.tsx  index.ts
frontend/src/components/PathItem/: FileIcon.tsx  PathItem.css  PathItem.tsx  fileIcon.tsx  index.ts  usePathItem.ts
frontend/src/components/Sidebar/: SidebarProvider.tsx  index.ts  useSidebar.ts
frontend/src/components/Snackbar/: Snackbar.css  Snackbar.ts  index.ts
frontend/src/components/WaldiezWrapper/: WaldiezWrapper.css  WaldiezWrapper.tsx  index.ts  useWaldiezWrapper.ts
frontend/src/utils/: debounce.ts  hashPath.ts  paths.ts
frontend/tests/: App.test.tsx  index.test.tsx
frontend/tests/api/: axiosInstance.test.ts  fileBrowserService.test.ts  waldiezFlowService.test.ts
frontend/tests/components/: PathItem.test.tsx  Sidebar.test.tsx  Snackbar.test.ts
frontend/tests/components/AnsiRenderer/: AnsiRenderer.test.tsx
frontend/tests/utils/: debounce.test.ts  paths.test.ts
public/: browserconfig.xml  site.webmanifest
public/files/: site.webmanifest
requirements/: all.txt  dev.txt  main.txt  test.txt
scripts/: build.py  build_dev.sh  clean.py  first_lines.py  format.py  header.py  image.py  lcov_html.ts  lint.py  merge_lcov.py  monaco.ts  post-build.ts  python.ts  requirements.py  start.sh  store-last-build-dt.ts  test.py  version.py  version.ts
scripts/hooks/: metadata.py  pre_build.py
src/: env.ts  index.css  index.tsx  svg.d.ts  vite-env.d.ts
src/app/: App.tsx  Layout.tsx
src/components/layout/: BottomPanel.tsx  LeftSidebar.tsx  MainView.tsx  TabBar.tsx  TitleBar.tsx
src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  code-block.tsx  data-table.tsx  dropdown-menu.tsx  fileIcon.tsx  input.tsx  resizable.tsx  select.tsx  table.tsx  tabs.tsx
src/features/waldiez/: controller.ts  types.ts  useAutoSave.ts  useWaldiezSession.ts
src/hooks/: GlobalRunListener.tsx  KeyboardListener.tsx
src/lib/: axiosInstance.ts  events.ts  fileTypes.ts  highlighter.ts  http.ts  utils.ts  wsExec.ts  wsTerminal.ts
src/store/: console.ts  drafts.ts  exec.ts  layout.ts  workspace.ts
src/tests/: index.test.tsx
src/tests/app/: App.test.tsx  GlobalRunListener.test.tsx  Layout.test.tsx
src/tests/hooks/: GlobalRunListener.test.tsx  KeyboardListener.test.tsx
src/tests/lib/: axiosInstance.test.ts  events.test.ts  fileTypes.test.ts  http.test.ts  wsExec.test.ts  wsTerminal.test.ts
src/tests/store/: console.test.ts  drafts.test.ts  exec.test.ts  layout.test.ts  workspace.test.ts
src/tests/theme/: hook.test.tsx  provider.test.tsx  toggle.test.tsx
src/tests/utils/: debounce.test.ts  deepMerge.test.ts  paths.test.ts
src/theme/: context.tsx  hook.ts  provider.tsx  toggle.tsx
src/types/: api.ts  events.ts  theme.ts
src/utils/: debounce.ts  deepMerge.ts  paths.ts
tests/: __init__.py  conftest.py  test_cli.py  test_logging.py  test_main.py  test_version.py
tests/config/: __init__.py  test_lib.py  test_settings.py
tests/data/: simple.waldiez  with_input.waldiez
tests/engines/: __init__.py  test_factory.py  test_kernel.py  test_notebook_engine.py  test_subprocess_engine.py  test_waldiez_engine.py
tests/middleware/: __init__.py  test_csp.py  test_extra_headers.py
tests/routes/: __init__.py  test_common.py  test_flow.py  test_terminal_ws.py  test_workspace.py  test_ws.py
tests/utils/: __init__.py  test_delegated_iostream.py  test_extra_static.py  test_io_stream.py  test_paths.py  test_results.py  test_task_runner.py  test_to_async.py  test_to_sync.py  test_unix_terminal_session.py  test_windows_terminal_session.py
vite.plugins/: index.ts  transformPublicFiles.ts
waldiez_studio/: __init__.py  __main__.py  _logging.py  _version.py  cli.py  main.py  run.py
waldiez_studio/config/: __init__.py  lib.py  settings.py
waldiez_studio/engines/: __init__.py  base.py  factory.py  kernel.py  notebook_engine.py  subprocess_engine.py  waldiez_engine.py
waldiez_studio/middleware/: __init__.py  csp.py  extra_headers.py
waldiez_studio/models/: __init__.py  flow.py  workspace.py  ws.py
waldiez_studio/routes/: __init__.py  api.py  common.py  flow.py  terminal_ws.py  workspace.py  ws.py
waldiez_studio/tests/: test_cli.py  test_logging.py  test_main.py  test_version.py
waldiez_studio/tests/config/: __init__.py  test_lib.py  test_settings.py
waldiez_studio/tests/middleware/: test_csp.py
waldiez_studio/tests/routes/: __init__.py  test_common.py  test_flow.py  test_workspace.py  test_ws.py
waldiez_studio/tests/utils/: test_extra_static.py  test_paths.py  test_task_runner.py  test_to_async.py
waldiez_studio/utils/: __init__.py  delegated_iostream.py  extra_static.py  extra_static_files.py  id_gen.py  io_stream.py  logging.py  paths.py  restart.py  results.py  sync.py  task_runner.py  task_state.py
waldiez_studio/utils/terminal_session/: __init__.py  base.py  unix_session.py  windows_session.py
(+50 files in other folders)
