
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waldiez_studio"
description = 'waldiez studio'
authors = [
  { name = 'Panagiotis Kasnesis', email = 'pkasnesis@waldiez.io' },
  { name= 'Lazaros Toumanidis', email= 'laztoum@waldiez.io' },
  { name= 'Christos Chatzigeorgiou', email= 'chrihatz@waldiez.io' },
]
readme = "README.md"
requires-python = '>=3.10'
dynamic = ["version"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Code Generators",
  "Typing :: Typed",
]
dependencies = [
    "aiofiles==25.1.0",
    "aiohttp==3.13.2",
    "fastapi<1",
    "jupyter_client==8.7.0",
    "orjson==3.11.5",
    "puremagic==1.30",
    "pydantic-settings==2.12.0",
    "python-multipart==0.0.21",
    "pywinpty==3.0.2; sys_platform == 'win32'",
    "tenacity>=9.0.0,<10",
    "trio==0.32.0",
    "typer>=0.9.0,<1",
    "uvicorn[standard]==0.38.0",
    "waldiez==0.7.0",
]

[project.urls]
homepage = 'https://github.com/waldiez/studio.git'
repository = 'https://github.com/waldiez/studio.git'

[project.scripts]
waldiez-studio = "waldiez_studio.cli:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
packages = ["waldiez_studio", "waldiez_studio.*"]
artifacts = [
    "waldiez_studio/static",
    "!waldiez_studio/static/frontend/last-build.txt"
]
exclude = [ "**/example.py", ".gitignore" ]

[tool.hatch.build.targets.wheel]
packages = ["waldiez_studio", "waldiez_studio.*"]
artifacts = [
    "waldiez_studio/static",
    "!waldiez_studio/static/frontend/last-build.txt",
]
exclude = [ "**/example.py", ".gitignore" ]

[project.optional-dependencies]
dev = [
    "autoflake==2.3.1",
    "bandit==1.9.2",
    "basedpyright==1.36.1",
    "black==25.12.0",
    "filelock==3.20.1",
    "flake8==7.3.0",
    "hatchling==1.28.0",
    "isort==7.0.0",
    "mypy==1.19.1",
    "prek==0.2.23",
    "pydocstyle==6.3.0",
    "pylint==4.0.4",
    "python-dotenv>=1.2.1",
    "ruff==0.14.10",
    "toml==0.10.2; python_version <= '3.10'",
    "types-aiofiles==25.1.0.20251011",
    "types-PyYAML==6.0.12.20250915",
    "types-toml==0.10.8.20240310",
    "yamllint==1.37.1",
]
test = [
    "asgi-lifespan==2.1.0",
    "filelock==3.20.1",
    "httpx<1",
    "pytest>=8.4.2",  # pytest-httpx depends on pytest==8.*
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-env==1.2.0",
    "pytest-html==4.1.1",
    "pytest-httpx",
    "pytest-sugar==1.1.1",
    "pytest-timeout==2.4.0",
]

[tool.hatch.version]
path = "waldiez_studio/_version.py"

[tool.hatch.metadata.hooks.custom]
path = "scripts/hooks/metadata.py"

[tool.hatch.build.hooks.custom]
path = "scripts/hooks/pre_build.py"

# black
[tool.black]
line-length = 80
skip-string-normalization=true
include = '''
    \.pyi?$
'''
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.hatch
  | \.venv
  | .local
  | _build
  | __init__.py
  | .local
  | examples
  | node_modules
  | waldiez_out
  | waldiez_studio/files
)/
'''

# mypy
[tool.mypy]
files = '.'
show_error_codes = true
# xcode/dmypy: follow-imports=silent not supported
# follow_imports = 'skip'
platform = 'linux'
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = false
no_implicit_reexport = true
strict_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
plugins = [
  'pydantic.mypy'
]
exclude = [
    '.venv',
    '.local',
    '.tox',
    '.hatch',
    'examples',
    'node_modules',
    'src',
    "waldiez_out",
    'waldiez_studio/files',
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = false

[tool.basedpyright]
include = ["waldiez_studio", "tests", "scripts"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src",
    ".tox",
    ".hatch",
    ".venv",
    ".local",
    "examples",
    "docs",
    "waldiez_out",
    "waldiez_studio/files"
]
extraPaths = ["."]
reportCallIssue = false
reportUnusedCallResult = false
reportExplicitAny = false
reportUnannotatedClassAttribute = false
reportAny = false
reportImplicitOverride = false

executionEnvironments = [
    {root = "tests",  reportPrivateUsage=false, reportUninitializedInstanceVariable=false, reportArgumentType=false, reportUnusedParameter=false, reportAssignmentType=false }
]

# isort
[tool.isort]
profile ='black'
skip=[
    '.venv',
    '.local',
    ".tox",
    ".hatch",
    "build",
    "dist",
    'examples',
    'node_modules',
    "waldiez_out",
    'waldiez_studio/files',
]
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=80

# pydocstyle
[tool.pydocstyle]
match-dir='([^!(.venv)].*)([^!(.local)].*)([^!(examples)].*)([^!(node_modules)].*)([^!(waldiez_out)].*)([^!(waldiez_studio/files)].*)'

# pylint
[tool.pylint.master]
load-plugins = [
    'pylint.extensions.mccabe',
    'pylint.extensions.redefined_variable_type',
    'pylint.extensions.broad_try_clause',
    'pylint.extensions.no_self_use',
    'pylint.extensions.docparams',
]
extension-pkg-whitelist= []
# reports=true
recursive=true
fail-under=8.0
ignore=["CVS"]
ignore-paths = [
    ".venv",
    ".local*",
    ".tox",
    ".hatch",
    "examples",
    "node_modules",
    "waldiez_out",
    'waldiez_studio/files',
]
unsafe-load-any-extension="no"

[tool.pylint.messages_control]
enable=["c-extension-no-member"]
[tool.pylint.format]
max-line-length=80
[tool.pylint.similarities]
ignore-imports="yes"
ignore-signatures="yes"
min-similarity-lines=10
[tool.pylint.broad_try_clause]
max-try-statements=3
[tool.pylint.design]
max-args=11
max-attributes=11
max-positional-arguments=11
max-statements=50
[tool.pylint.string]
check-quote-consistency = true
check-str-concat-over-line-jumps = true
[tool.pylint.parameter_documentation]
accept-no-param-doc=false
accept-no-raise-doc=false
accept-no-return-doc=false
accept-no-yields-doc=false
# Possible choices: ['sphinx', 'epytext', 'google', 'numpy', 'default']
default-docstring-type = "numpy"

# bandit
[tool.bandit]
exclude_dirs = [
    ".venv",
    ".local",
    ".tox",
    ".hatch",
    "examples",
    "node_modules",
    'waldiez_studio/files'
]
# B104: bind to all interfaces (0.0.0.0)
# B110: allow pass on try/except
# B404: allow import subprocess
# B602, B603: allow shell=True (subprocess,popen)
skips = ['B104', 'B110', 'B404', 'B602', 'B603' ]
[tool.bandit.assert_used]
skips = ['*_test.py', '*/test_*.py']

# ruff
[tool.ruff]
line-length = 80
extend-exclude = [
    ".venv",
    ".local",
    ".tox",
    ".hatch",
    "examples",
    "node_modules",
    'waldiez_studio/files',
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "Q"]
ignore = []
# # Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# # Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# exclude = ["*.pyi", "*.j2"]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
line-ending = "lf"

# pytest
[tool.pytest.ini_options]
asyncio_mode = 'auto'
asyncio_default_fixture_loop_scope='session'
filterwarnings = [
    # DeprecationWarning: Type google._upb._message.MessageMapContainer \
    # uses PyType_Spec with a metaclass that has custom tp_new. \
    # This is deprecated and will no longer be allowed in Python 3.14.
    "ignore::DeprecationWarning",
]
env = [
  "WALDIEZ_TESTING=1",
  "PYTHONUNBUFFERED=1",
  "PYTHONTRACEMALLOC=20",
]
python_files = [
    "tests.py",
    "test_*.py",
    "*_tests.py",
]
addopts = """
    --exitfirst \
    --durations=10 \
    --color=yes \
    --timeout=120
"""


# coverage
[tool.coverage.run]
omit = [
    ".venv/*",
    ".local/*",
    ".tox/*",
    ".hatch/*",
    "examples/*",
    "node_modules/*",
    'waldiez_studio/files/*',
    "waldiez_studio/__main__.py",
    "waldiez_studio/utils/terminal_session/windows_session.py",
]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError:",
]
fail_under = 80
precision = 2
